mdapi-source/original-package/objects/Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FileURL__c</fullName>
        <label>File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attachment</label>
    <nameField>
        <label>Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>